# star_wars_API

./: .gitignore  README.md  pyproject.toml
common/: apisession.py  common.py
models/: films.py  people.py  root.py  starships.py
tests/: conftest.py  test_films.py  test_people.py  test_root.py  test_shop.py  test_starships.py
utils/: resource.py
